# image-restoration

./: .gitignore  process_dataset.py  pyproject.toml
models/unet/: train_unet.sbatch  unet.py  unet_model.pth  unet_model_1300.pth
notebooks/: corruption_general.ipynb  generate_dataset.ipynb
scripts/: process_dataset.py  train_unet.sbatch  unet.py
src/image_restoration/: common.py
src/image_restoration/corruption/: geom.py  ocean.py  optics.py  transforms.py
