[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "image_restoration"
version = "0.0.1"
description = ""
readme = "README.md"
requires-python = ">=3.10.0"
classifiers = [
    "Programming Language :: Python",
]
dependencies = [
    "jaxtyping",
    "lightning",
    "matplotlib",
    "natsort",
    "nerfstudio",
    "ninja",
    "numpy==1.26.4",
    "omegaconf",
    "openai-clip",
    "opencv-python",
    "pyrender",
    "torch==2.4.1",
    "torchvision",
    "tqdm",
]

[project.optional-dependencies]

[project.scripts]

[tool.setuptools.packages.find]
where = ["src"]
include = ["image_restoration*"]